@@ -68,19 +68,19 @@ public class ReusableMessageFactoryTest {
         final ReusableMessageFactory factory = new ReusableMessageFactory();
         final Message message1 = factory.newMessage("text, p0={} p1={} p2={} p3={}", 1, 2, 3, 4);
         assertReusableParameterizeMessage(message1, "text, p0={} p1={} p2={} p3={}", new Object[]{
-                new Integer(1), //
-                new Integer(2), //
-                new Integer(3), //
-                new Integer(4), //
+                Integer.valueOf(1), //
+                Integer.valueOf(2), //
+                Integer.valueOf(3), //
+                Integer.valueOf(4), //
         });
 
         ReusableMessageFactory.release(message1);
         final Message message2 = factory.newMessage("other, A={} B={} C={} D={}", 1, 2, 3, 4);
         assertReusableParameterizeMessage(message1, "other, A={} B={} C={} D={}", new Object[]{
-                new Integer(1), //
-                new Integer(2), //
-                new Integer(3), //
-                new Integer(4), //
+                Integer.valueOf(1), //
+                Integer.valueOf(2), //
+                Integer.valueOf(3), //
+                Integer.valueOf(4), //
         });
         assertSame(message1, message2);
         ReusableMessageFactory.release(message2);
@@ -111,17 +111,17 @@ public class ReusableMessageFactoryTest {
         assertNotNull(message2[0]);
         assertNotSame(message1[0], message2[0]);
         assertReusableParameterizeMessage(message1[0], "text, p0={} p1={} p2={} p3={}", new Object[]{
-                new Integer(1), //
-                new Integer(2), //
-                new Integer(3), //
-                new Integer(4), //
+                Integer.valueOf(1), //
+                Integer.valueOf(2), //
+                Integer.valueOf(3), //
+                Integer.valueOf(4), //
         });
 
         assertReusableParameterizeMessage(message2[0], "other, A={} B={} C={} D={}", new Object[]{
-                new Integer(1), //
-                new Integer(2), //
-                new Integer(3), //
-                new Integer(4), //
+                Integer.valueOf(1), //
+                Integer.valueOf(2), //
+                Integer.valueOf(3), //
+                Integer.valueOf(4), //
         });
         ReusableMessageFactory.release(message1[0]);
         ReusableMessageFactory.release(message2[0]);
